objects/ASI_KOR_VMS_Interface_File__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Actual_Volume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount__c</fullName>
        <label>VI Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Capacity_ml__c</fullName>
        <label>Capacity (ml)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_ETL_Date__c</fullName>
        <label>ETL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_ETL_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Exceptional_Case__c</fullName>
        <formula>OR(
  ASI_KOR_Keyman_Original__c &lt;&gt;  ASI_KOR_Keyman__c ,
  ASI_KOR_VI_Amount_Original__c &lt;&gt;  ASI_KOR_CA_Amount__c ,
  ASI_KOR_Is_Cloned__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_VI__c</fullName>
        <label>Final VI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Input_Date__c</fullName>
        <label>Input Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Input_Method__c</fullName>
        <label>Input Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Is_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>VMS Interface Files</relationshipLabel>
        <relationshipName>VMS_Interface_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Keyman_Code__c</fullName>
        <label>Keyman Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Keyman_Original__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyman (Original)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>VMS Interface Files (Keyman (Original))</relationshipLabel>
        <relationshipName>VMS_Interface_Files1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Keyman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyman</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.ASI_KOR_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>VMS Interface Files</relationshipLabel>
        <relationshipName>VMS_Interface_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Month__c</fullName>
        <label>Promotion Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Year__c</fullName>
        <label>Promotion Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Quantity_Bottle__c</fullName>
        <label>Quantity (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Quantity_Case__c</fullName>
        <label>Quantity (Case)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SR_Code__c</fullName>
        <label>SR Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SYS_External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VI_Amount_Original__c</fullName>
        <label>VI Amount (Original)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VMS_Brand_Code__c</fullName>
        <label>VMS Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VMS_Product_Code__c</fullName>
        <label>VMS Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VMS_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VMS Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Code__c</fullName>
        <label>Venue Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VMS Interface Files</relationshipLabel>
        <relationshipName>VMS_Interface_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Volume__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_Code__c</fullName>
        <label>WS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VMS Interface File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Promotion_2014</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Keyman_Code__c</columns>
        <columns>ASI_KOR_Input_Date__c</columns>
        <columns>ASI_KOR_Input_Method__c</columns>
        <columns>ASI_KOR_Volume__c</columns>
        <columns>ASI_KOR_VMS_Product_Code__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Branch_Code__c</columns>
        <columns>ASI_KOR_SR_Code__c</columns>
        <columns>ASI_KOR_WS_Code__c</columns>
        <columns>ASI_KOR_Venue_Code__c</columns>
        <columns>ASI_KOR_Remark__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>startsWith</operation>
            <value>2014</value>
        </filters>
        <label>All-Promotion 2014</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Promotion_2015</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Keyman_Code__c</columns>
        <columns>ASI_KOR_Input_Date__c</columns>
        <columns>ASI_KOR_Input_Method__c</columns>
        <columns>ASI_KOR_Volume__c</columns>
        <columns>ASI_KOR_VMS_Product_Code__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Branch_Code__c</columns>
        <columns>ASI_KOR_SR_Code__c</columns>
        <columns>ASI_KOR_WS_Code__c</columns>
        <columns>ASI_KOR_Venue_Code__c</columns>
        <columns>ASI_KOR_Remark__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>startsWith</operation>
            <value>2015</value>
        </filters>
        <label>All-Promotion 2015</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Promotion_2016</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Keyman_Code__c</columns>
        <columns>ASI_KOR_Input_Date__c</columns>
        <columns>ASI_KOR_Input_Method__c</columns>
        <columns>ASI_KOR_Volume__c</columns>
        <columns>ASI_KOR_VMS_Product_Code__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Branch_Code__c</columns>
        <columns>ASI_KOR_SR_Code__c</columns>
        <columns>ASI_KOR_WS_Code__c</columns>
        <columns>ASI_KOR_Venue_Code__c</columns>
        <columns>ASI_KOR_Remark__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>startsWith</operation>
            <value>2016</value>
        </filters>
        <label>All-Promotion 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201710_Oct_Complete</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <filters>
            <field>ASI_KOR_VMS_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201710 Oct_Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711_Nov</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>201804 Apr</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711_Nov1</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <filters>
            <field>ASI_KOR_VMS_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201711 Nov_complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711_Nov_not_complete</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <filters>
            <field>ASI_KOR_VMS_Sync__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_KOR_CA_Amount__c</field>
            <operation>greaterThan</operation>
            <value>KRW 0</value>
        </filters>
        <label>201711 Nov_not_complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711_Nov_test</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <filters>
            <field>ASI_KOR_ETL_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>201711 Nov_ETL=2017.12.28</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711_Nov_test1</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>ASI_KOR_SYS_External_ID__c</field>
            <operation>startsWith</operation>
            <value>41370763</value>
        </filters>
        <label>201711 Nov_test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201712_Dec</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>201712 Dec</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201712_Dec_complete</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <filters>
            <field>ASI_KOR_VMS_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201712 Dec_complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201712_Dec_test</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>ASI_KOR_SYS_External_ID__c</field>
            <operation>startsWith</operation>
            <value>43630089</value>
        </filters>
        <label>201801_test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201802</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Item_Group__c</columns>
        <columns>ASI_KOR_Keyman__c</columns>
        <columns>ASI_KOR_Actual_Volume__c</columns>
        <columns>ASI_KOR_CA_Amount__c</columns>
        <columns>ASI_KOR_Final_VI__c</columns>
        <columns>ASI_KOR_VMS_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Promotion_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Promotion_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>201802</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VMS-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMS Interface Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>